make some changes

--- a/index.html
+++ b/index.html
@@ -1,13 +1,182 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment-2</title>
-    <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
-</body>
+    <!--------------- navigation ------------->
+    <header class="container">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light shadow fixed-top">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#"><img src="./Penguin Fashion/Logo, Icon/LOGO.png" alt=""
+                        class="w-100 h-100"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav ml-auto">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active" href="#">Product</a>
+                        <a class="nav-link active" href="#">About Us</a>
+                        <a class="nav-link active" href="#" tabindex="-1" aria-disabled="true">Contact Us</a>
+                    </div>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <main class="container">
+
+        <!----------------------- PROFILE_SECTION --------------------------->
+
+        <section class="mt-5">
+            <div class="row row-cols-1 row-cols-md-2 g-4">
+                <div class="col">
+                    <div class="card profile-card h-100 shadow">
+                        <div class="card-body">
+                            <h1>BE THE PENGUINS <br>OF WINTER</h1>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione perferendis dicta numquam eligendi ex iure.</p>
+                        </div>
+                        <div class="card-footer profile-card-footer">
+                            <button type="button" class="btn btn-warning">BUY</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card profile-card h-100 shadow">
+                        <img src="./Penguin Fashion/Image/" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Nike-360</h5>
+                            <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                                content.</p>
+                        </div>
+                        <div class="card-footer profile-card-footer">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!--------------------------- WOMAN_JACKET_SECTION ------------------------>
+
+        <section class="mt-5 mb-5">
+            <h2>Women Jacket</h2>
+            <div class="row row-cols-1 row-cols-md-3 g-4 pt-5">
+                <div class="col">
+                    <div class="card panda-card h-100 shadow">
+                        <img src="./Penguin Fashion/Image/yellow_coat_jacket.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h3>Yellow Coat Jacket</h3>
+                            <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quo, tempore.</p>
+                        </div>
+                        <div class="card-footer panda-card-footer d-flex align-items-center justify-content-around">
+                            <p>$234</p>
+                            <button class="btn-warning">Buy Now</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100 shadow">
+                        <img src="./Penguin Fashion/Image/ladies_jacket.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Nike-360</h5>
+                            <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                                content.</p>
+                        </div>
+                        <div class="card-footer panda-card-footer d-flex align-items-center justify-content-around">
+                            <p>$234</p>
+                            <button class="btn-warning">Buy Now</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100 shadow">
+                        <img src="./Penguin Fashion/Image/woman_leather_jacket.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Red-Airmax</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional
+                                content. This card has even longer content than the first to show that equal height
+                                action.</p>
+                        </div>
+                        <div class="card-footer panda-card-footer d-flex align-items-center justify-content-around">
+                            <p>$234</p>
+                            <button class="btn-warning">Buy Now</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!---------------------------- MAN_JACKET_SECTION -------------------------->
+
+        <section class="mt-5 mb-5">
+            <h2 class="mt-5 mb-5">MAN JACKET</h2>
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+                <div class="col">
+                    <div class="card panda-card h-100 shadow">
+                        <img src="./Penguin Fashion/Image/snowboard_jackt_mens.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Supply-350</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional
+                                content. This content is a little bit longer.</p>
+                        </div>
+                        <div class="card-footer panda-card-footer d-flex align-items-center justify-content-around">
+                            <p>$234</p>
+                            <button class="btn-warning">Buy Now</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100 shadow">
+                        <img src="./Penguin Fashion/Image/man_leather_jackets.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Nike-360</h5>
+                            <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                                content.</p>
+                        </div>
+                        <div class="card-footer panda-card-footer d-flex align-items-center justify-content-around">
+                            <p>$234</p>
+                            <button class="btn-warning">Buy Now</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100 shadow">
+                        <img src="./Penguin Fashion/Image/man_casual_jackets.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Red-Airmax</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional
+                                content. This card has even longer content than the first to show that equal height
+                                action.</p>
+                        </div>
+                        <div class="card-footer panda-card-footer d-flex align-items-center justify-content-around">
+                            <p>$234</p>
+                            <button class="btn-warning">Buy Now</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!--------------------------------  FOOTER_SECTION  ---------------------------->
+
+        <div class="container">
+            <div class="row row-cols-2">
+                <div class="col shadow">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, repellendus dolorum. Voluptates animi ut quasi unde voluptatibus ducimus blanditiis veniam?</div>
+                <div class="col shadow">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, repellendus dolorum. Voluptates animi ut quasi unde voluptatibus ducimus blanditiis veniam?</div>
+            </div>
+        </div>
+    </main>
+
 </html>
